Use built-in logging mechanism instead of just print

--- a/example.ini
+++ b/example.ini
@@ -1,3 +1,6 @@
+[DEFAULT]
+#verbosity = warning
+
 [core]
 #user_requests_limit = 10
 #user_requests_limit_interval = 600
@@ -35,6 +38,10 @@ search_page_xpath_ratings =
 search_page_xpath_page_links =
 
 download_page_xpath =
+
+[downloader_link]
+
+[downloader_file]
 
 [streamer_vlc]
 vlc_options = sout=#transcode{acodec=mp3,ab=320,channels=2,samplerate=44100}:duplicate{dst=gather:http{mux=ts,dst=:1233/},dst=display}
