Add MPD streamer

--- a/example.ini
+++ b/example.ini
@@ -46,6 +46,9 @@ download_page_xpath =
 [streamer_vlc]
 vlc_options = sout=#transcode{acodec=mp3,ab=320,channels=2,samplerate=44100}:duplicate{dst=gather:http{mux=ts,dst=:1233/},dst=display}
 
+[streamer_mpd]
+mpd_music_path = /opt/tg_dj/
+
 [streamer_liquidsoap]
 exe_path =
 config_path =
