Allow changing fallback tracks location
Note: this commit also changes the default location of fallback tracks

--- a/example.ini
+++ b/example.ini
@@ -9,6 +9,7 @@
 
 [scheduler]
 #queue_file = brain/queue.json
+#fallback_media_dir = media_fallback
 
 [telegram]
 #api_url = https://api.telegram.org/
