--- a/example.ini
+++ b/example.ini
@@ -8,7 +8,7 @@
 #song_rating_cnt_min = 3
 
 [scheduler]
-#queue_file = brain/queue.json
+#queue_file = queue.json
 #fallback_media_dir = media_fallback
 
 [telegram]
