--- a/example.ini
+++ b/example.ini
@@ -55,4 +55,4 @@ config_path =
 #listen_port = 8080
 #listen_addr = 127.0.0.1
 stream_url =
-#ws_url = ws://localhost:8080/ws
+#ws_url = ws://localhost:8080/ws  # default = auto
