Change main service name

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,11 +2,11 @@ server {
     listen 0.0.0.0:80 default_server;
 
     location / {
-        proxy_pass http://tg_dj:8080;
+        proxy_pass http://app:8080;
     }
 
     location /ws {
-        proxy_pass http://tg_dj:8080;
+        proxy_pass http://app:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -15,11 +15,11 @@ server {
 
     location /stream {
         rewrite /stream /music break;
-        proxy_pass http://tg_dj:1233;
+        proxy_pass http://app:1233;
     }
 
     location /metrics {
         rewrite /metrics / break;
-        proxy_pass http://tg_dj:8910;
+        proxy_pass http://app:8910;
     }
 }
