Fix issues in Firefox caused by caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 0.0.0.0:80 default_server;
+    add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
 
     location / {
         proxy_pass http://app:8080;
