--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ server {
     }
 
     location /stream {
-        rewrite /stream /music break;
+        rewrite /stream /stream break;
         proxy_pass http://app:1233;
     }
 
