nginx: change /music to /stream

--- a/config-docker.ini
+++ b/config-docker.ini
@@ -45,7 +45,7 @@ download_page_xpath =
 [downloader_file]
 
 [streamer_vlc]
-vlc_options = sout=#transcode{acodec=vorbis,ab=320,channels=2,samplerate=44100}:gather:http{mux=ogg,dst=:1233/music}
+vlc_options = sout=#transcode{acodec=vorbis,ab=320,channels=2,samplerate=44100}:gather:http{mux=ogg,dst=:1233/stream}
 
 [streamer_liquidsoap]
 exe_path =
