--- a/example.ini
+++ b/example.ini
@@ -31,14 +31,14 @@ api_key =
 [downloader_html]
 base_uri = some musify or muzcloud site
 
-search_page_uri: search?searchText={0}
-search_page_xpath_titles: //div[@class="playlist__item"]/@data-name
-search_page_xpath_artists: //div[@class="playlist__item"]/@data-artist
-search_page_xpath_durations: //div[@class="playlist__item"]/div[@class="track__details hidden-xs-down"][2]/span[1]/text()
-search_page_xpath_ratings: //div[@class="playlist__item"]/div[@class="track__details hidden-xs-down"][2]/span[3]/text()
-search_page_xpath_page_links: //div[@class="playlist__item"]/div[@class="playlist__details"]/div[@class="playlist__heading "]/a/@href
+search_page_uri = search?searchText={0}
+search_page_xpath_titles = //div[@class="playlist__item"]/@data-name
+search_page_xpath_artists = //div[@class="playlist__item"]/@data-artist
+search_page_xpath_durations = //div[@class="playlist__item"]/div[@class="track__details hidden-xs-down"][2]/span[1]/text()
+search_page_xpath_ratings = //div[@class="playlist__item"]/div[@class="track__details hidden-xs-down"][2]/span[3]/text()
+search_page_xpath_page_links = //div[@class="playlist__item"]/div[@class="playlist__details"]/div[@class="playlist__heading "]/a/@href
 
-download_page_xpath: //a[@itemprop="audio"]/@href
+download_page_xpath = //a[@itemprop="audio"]/@href
 
 [downloader_link]
 
