--- a/example.ini
+++ b/example.ini
@@ -7,7 +7,7 @@
 #song_rating_threshold = 0.3
 #song_rating_cnt_min = 3
 
-[scheduler]
+[queue_manager]
 #queue_file = queue.json
 #fallback_media_dir = media_fallback
 
