--- a/example.ini
+++ b/example.ini
@@ -15,18 +15,15 @@
 #api_url = https://api.telegram.org/
 token =
 
+[discord]
+token =
+
 [downloader]
 #max_duration = 400
 #max_file_size = 20
 #files_storage_limit = 60
 #search_max_results = 10
 #media_dir = media
-
-[downloader_vk]
-#datmusic_api_url = https://api-2.datmusic.xyz/search
-
-[downloader_youtube]
-api_key =
 
 [downloader_html]
 base_uri = some musify or muzcloud site
@@ -40,6 +37,8 @@ search_page_xpath_page_links = //div[@class="playlist__item"]/div[@class="playli
 
 download_page_xpath = //a[@itemprop="audio"]/@href
 
+[downloader_youtube]
+
 [downloader_link]
 
 [downloader_file]
@@ -47,12 +46,8 @@ download_page_xpath = //a[@itemprop="audio"]/@href
 [streamer_vlc]
 vlc_options = sout=#transcode{acodec=mp3,ab=320,channels=2,samplerate=44100}:duplicate{dst=gather:http{mux=ts,dst=:1233/},dst=display}
 
-[streamer_liquidsoap]
-exe_path =
-config_path =
-
 [web_server]
 #listen_port = 8080
 #listen_addr = 127.0.0.1
-stream_url =
+#stream_url = /stream
 #ws_url = ws://localhost:8080/ws  # default = auto
